--- a/html/index.html
+++ b/html/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <link rel="stylesheet" href="/css/normalize.css">
-  <link rel="stylesheet" href="/css/application.css">
+  <link rel="stylesheet" href="../css/normalize.css">
+  <link rel="stylesheet" href="../css/application.css">
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
- <script type="text/javascript" src="/js/application.js"></script>
+ <script type="text/javascript" src="../js/application.js"></script>
 
   <title>Connect Four</title>
 
 </head>
 <body>
- :D
+  <section id="board">
+  </section>
+
 </body>
 </html>
