--- a/html/index.html
+++ b/html/index.html
@@ -10,8 +10,9 @@
 
 </head>
 <body>
-  <section id="board">
-  </section>
-
+  <h1>Connect 4</h1>
+  <div id="board">
+  </div>
+  <div id="win_message"></div>
 </body>
 </html>
