--- a/html/index.html
+++ b/html/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
   <h1>Connect 4</h1>
-  <div id="board">
-  </div>
+  <div id="turn-counter"></div>
+  <div id="board"></div>
   <div id="win_message"></div>
 </body>
 </html>
