Add pictures and change text to make the game election based"

--- a/html/index.html
+++ b/html/index.html
@@ -7,11 +7,11 @@
   <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
   <script type="text/javascript" src="../js/application.js"></script>
 
-  <title>Connect Four</title>
+  <title>General Election</title>
 
 </head>
 <body>
-  <h1>Connect 4</h1>
+  <h1>General Election</h1>
   <div id="board">
     <form>
       <input type="submit" value="New Game">
